# dofus-price-bot

./: .gitignore  CODE_OF_CONDUCT.md  DOFUS_RETRO_PRD.md  LICENCE  README.md  SECURITY.md  api.py  gui.py  main.py  pyproject.toml  recipe.json  requirements.txt  where_is_mouse.py
.github/workflows/: publish.yml
docs/: READMEapi.md
dofus_cookbot/: __main__.py
dofus_cookbot/api/: api.py
dofus_cookbot/gui/: gui.py
dofus_cookbot/modules/: gui.py  position_finder.py
