[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dofus_cookbot"
version = "1.0.0"
authors = [{name="wildpasta", email="contact@pastabox.dev" }]
description = "dofus bot to fetch real time value of ressources needed for crafting"
readme = "README.md"
dependencies = [
    "Pillow==10.0.0",
    "prettytable==3.8.0",
    "pynput==1.7.6",
    "pyscreenshot==3.1",
    "pytesseract==0.3.10",
    "Requests==2.31.0"
]
requires-python = ">=3.10"

[project.scripts]
dofus_cookbot = "dofus_cookbot.__main__:main"

[tool.setuptools.package-data]
dofus_cookbot = ["res/*.json"]

[project.urls]
homepage = "https://blog.pastabox.dev"