[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dofus_cookbot"
version = "1.1.1"
authors = [{name="wildpasta", email="contact@pastabox.dev" }]
description = "dofus bot to fetch real time value of ressources needed for crafting"
readme = "README.md"
dependencies = [
    "Pillow==10.4.0",
    "prettytable==3.8.0",
    "pyautogui==0.9.54",
    "pynput==1.7.6",
    "pyscreenshot==3.1",
    "pytesseract==0.3.10",
    "Requests==2.31.0"
]
requires-python = ">=3.9"

[project.scripts]
dofus_cookbot = "dofus_cookbot.__main__:main"

[tool.setuptools.package-data]
dofus_cookbot = ["res/*.json"]

[tool.setuptools.packages.find]
where = ["dofus_cookbot"]

[project.urls]
homepage = "https://blog.pastabox.dev"